--- a/example/layout.css
+++ b/example/layout.css
@@ -24,13 +24,13 @@
 }
 
 .pointer-wrap {
-	/*position: absolute;*/
-	/*top: 50px;*/
-	/*bottom: 0;*/
+	position: absolute;
+	top: 50px;
+	bottom: 50px;
 	/*left: 0;*/
 	/*right: 0;*/
 	/*display: inline-block;*/
-	height: 80%;
+	/*height: 100%;*/
 	width: 100%;
 	vertical-align: middle;
 	text-align: center;
