--- a/example/theme/css/theme.css
+++ b/example/theme/css/theme.css
@@ -185,7 +185,7 @@ div[data-role=view] {
     margin: 0 15px 15px 0;
 }
 .section__content {
-    padding: 10px 20px;
+    padding: 0px 0;
     border-top: 1px solid #333434;
     overflow: hidden;
 }
